Fixed issue with my sticker footer covering some of my content. Added overflow-y to my recipes and add/edit recipe pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
-html {
-    height: 100%;
-}
-
-body {
-    min-height: 100%;
-}
-
 /* ---------------------------------------------base.html*/
+.container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 5rem;
+}
+
 /* ---------------------------------------------Navbar*/
 .navbar {
     background-color: #3c1642;
@@ -47,6 +48,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
+     height: 5rem;
 }
 
 footer a:link,
@@ -171,6 +173,10 @@ footer a:active {
     background-color: #affc41;
 }
 
+.list-group {
+    overflow: auto;
+}
+
 /* ---------------------------------------------View recipe page*/
 .table,
 th,
@@ -199,6 +205,10 @@ td {
 .add-recipe {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+}
+
+.act-recipe {
+    overflow: auto;
 }
 
 /* ---------------------------------------------Products page*/
